2009-12-10	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add adamain test. This is a strictly C version of the
	startup code for a GNAT Ada application. If this does not run, then
	Ada code has no prayer of running.
	* adamain/.cvsignore, adamain/Makefile, adamain/README,
	adamain/adacode.c, adamain/rtems_init.c: New files.

2009-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* applib/Makefile, applib/file_1.c, applib/private.h,
	applib/userLib.h: New files.

2009-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add example for extracting values from RTEMS Application
	Makefile infrastructure.
	* extract_example/.cvsignore, extract_example/Makefile,
	extract_example/README: New files.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add new program to demonstrate use of BSP command line
	arguments.
	* bspcmdline/.cvsignore, bspcmdline/Makefile, bspcmdline/README,
	bspcmdline/test.c: New files.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* minimum/test.c: Remove warning.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog: New file.
